# CopyTest

./: .gitignore  CMakeLists.txt  ReadMe.md
src/: DotLogger.cpp  DotLogger.hpp  Logger.cpp  Logger.hpp  MySTL.hpp  Num.cpp  Num.hpp  Watcher.hpp  main.cpp  print.hpp  stream.cpp  stream.hpp
